Added table of quadrotor properties and francois code as is for kinetics

--- a/control/mpc.tex
+++ b/control/mpc.tex
@@ -437,7 +437,7 @@
         the weight in $\bm{w}^u$ corresponds to the variable $A_{N_{sp}}$, and 
         the weight in $\bm{w}^{\Delta u}$ corresponds to the variable $\Delta A_{N_{sp}} (k)  =  A_{N_{sp}} (k) - A_{N_{sp}} (k-1)$.
 
-        \begin{table}[!h]
+        \begin{table}[!htbp]
             \renewcommand{\arraystretch}{1.1}
             \centering
             \caption{MPC configuration parameters.}
