--- a/glossary.tex
+++ b/glossary.tex
@@ -50,6 +50,9 @@
 \newacronym{MO}{MO}{Measured Output}
 \newacronym{SISO}{SISO}{Single Input Single Output}
 
+\newacronym{DCM}{DCM}{Direct Cosine Matrix}
+\newacronym{ODE}{ODE}{Ordinary Differential Equation}
+
 
 % \newacronym{MOsp}{MO\subscript{sp}}{Measured Output Setpoint}
 
