--- a/modelling/modelling.tex
+++ b/modelling/modelling.tex
@@ -169,7 +169,7 @@ This 3D mathematical model will be used in a non-linear simulation of a multirot
                 $I_{zz}$    & Mass moment of inertia about $\bm{\bar{z}}_\mathcal{B}$ \\ 
                 $d$         & Distance from \gls{CoM} to each motor\\
                 $R_N$       & Virtual yaw moment arm \\
-                $\tau$      & Motor time constant \\ 
+                $\tau$      & Motor-propeller pair time constant \\ 
                 $C_{D_X}$   & Aerodynamic drag coefficient in $\bm{\bar{x}}_\mathcal{B}$ direction \\
                 $C_{D_Y}$   & Aerodynamic drag coefficient in $\bm{\bar{x}}_\mathcal{B}$ direction \\
                 $C_{D_Z}$   & Aerodynamic drag coefficient in $\bm{\bar{x}}_\mathcal{B}$ direction \\
@@ -257,15 +257,15 @@ This 3D mathematical model will be used in a non-linear simulation of a multirot
     \paragraph
     The \gls{DCM} is also derived by \cite{Schaub2017} and can be calculated from the attitude quaternion as,
     \begin{equation}
-        \boldsymbol{R}_{V}=\left[\begin{array}{ccc}
+        \bm{R}_{V}=\left[\begin{array}{ccc}
         q_{0}^{2}+q_{1}^{2}+q_{2}^{2}+q_{3}^{2} & 2\left(q_{1} q_{2}+q_{0} q_{3}\right) & 2\left(q_{1} q_{3}-q_{0} q_{2}\right) \\
         2\left(q_{1} q_{2}-q_{0} q_{3}\right) & q_{0}^{2}-q_{1}^{2}+q_{2}^{2}-q_{3}^{2} & 2\left(q_{2} q_{3}+q_{0} q_{1}\right) \\
         2\left(q_{1} q_{3}+q_{0} q_{2}\right) & 2\left(q_{2} q_{3}-q_{0} q_{1}\right) & q_{0}^{2}-q_{1}^{2}-q_{2}^{2}+q_{3}^{2}
         \end{array}\right] .
     \end{equation}
-    $\boldsymbol{R}_{V}$ is the transformation matrix that describes the rotation from the body frame to the inertial frame such that,
+    $\bm{R}_{V}$ is the transformation matrix that describes the rotation from the body frame to the inertial frame such that,
     \begin{equation}
-        \bm{V}_{\mathcal{I}} = \boldsymbol{R}_{V}^{-1} \bm{V}_{\mathcal{B}}
+        \bm{V}_{\mathcal{I}} = \bm{R}_{V}^{-1} \bm{V}_{\mathcal{B}}
     \end{equation}
 
     \paragraph
@@ -275,12 +275,126 @@ This 3D mathematical model will be used in a non-linear simulation of a multirot
 \FloatBarrier\section{Forces and moments}
 
     \paragraph
-    damping of payload angle
+    Different phenomena apply forces and moments to quadrotor during flight.
+    The sum of the forces and sum of moments acting on the quadrotor in the body frame are given by,
+    \begin{align}
+        \bm{F}_\mathcal{B} &= \bm{F}_\mathcal{B}^T + \bm{F}_\mathcal{B}^A + \bm{F}_\mathcal{B}^G + \bm{F}_\mathcal{B}^P \mbox{ and}\\
+        \bm{M}_\mathcal{B} &= \bm{M}_\mathcal{B}^T + \bm{M}_\mathcal{B}^A + \bm{M}_\mathcal{B}^G + \bm{M}_\mathcal{B}^P.
+    \end{align}
+    The phenomena that cause the different forces and moments are denoted by the subscripts, T, A, G, and P, which refer to actuator thrust, aerodynamic drag, gravity, and the payload respectively. 
+    These phenomena are also considered and modelled by \cite{Erasmus2020} and \cite{Slabber2020}.    
+
+    \paragraph
+    \textbf{Actuator thrust} \newline
+    A quadrotor has four rotors which each produce a thrust as shown in Figure~\ref{fig:coord_frames}.
+    However the actuators collectively apply a force, $\bm{F}_\mathcal{B}^T$, 
+    and moment, $\bm{M}_\mathcal{B}^T$, to the vehicle.
+    This force and moment can be represented in terms of virtual actuators as,
+    \begin{equation}
+        \bm{F}_{\mathcal{B}}^T = 
+        \begin{bmatrix}
+            0\\
+            0\\
+            \delta_T
+        \end{bmatrix} \mbox{~~and~~}
+        \bm{M}_{\mathcal{B}}^T = 
+        \begin{bmatrix}
+            d \cdot \delta_A \\
+            d \cdot \delta_E \\
+            R_N \cdot \delta_R
+        \end{bmatrix} ,
+    \end{equation}
+    where $d \delta_T$, $d \delta_A$, $d \delta_E$, and $d \delta_R$, represent the virtual aileron, elevator, and rudder actuators.
+    These values are calculated with a mixing matrix, such that,
+    \begin{equation} \label{eq:mixing_matrix}
+            \begin{bmatrix}
+            \delta_T\\
+            \delta_A\\
+            \delta_E\\
+            \delta_R
+        \end{bmatrix} = 
+        \begin{bmatrix*}[c]
+            1 & 1 & 1 & 1\\
+            -\frac{1}{\sqrt{2}} & \frac{1}{\sqrt{2}} & \frac{1}{\sqrt{2}} & -\frac{1}{\sqrt{2}}\\
+            \frac{1}{\sqrt{2}} & -\frac{1}{\sqrt{2}} & \frac{1}{\sqrt{2}} & -\frac{1}{\sqrt{2}}\\
+            1 & 1 & -1 & -1
+        \end{bmatrix*}
+        \begin{bmatrix}
+            T_1\\
+            T_2\\
+            T_3\\
+            T_4
+        \end{bmatrix} ,
+    \end{equation}
+    where $\bm{T} = [T_1~~T_2~~T_3~~T_4]^T$ is a vector of thrust forces produced by the four individual rotors.
+    Each motor-propeller pair receives a thrust setpoint and produces a corresponding thrust.
+    This is modelled with a first order Differential equation given by,
+    \begin{equation}
+        \dot{\bm{T}} = \frac{ \bm{T}_{sp} - \bm{T} }{ \tau } ,
+    \end{equation}
+    where $\bm{T}_{sp}$ is a vector of thrust setpoints corresponding to $\bm{T}$, and $\tau$ is the time constant of the motor-propeller pair.
+        
+    % ?? Define R_N
+    \paragraph
+    \textbf{Aerodynamics} \newline
+    Multirotors experience aerodynamic forces due to the relative velocity of air over the vehicle.
+    The aerodynamic model is based on work done by \cite{Moller2015} and is also applied successfully by \cite{Erasmus2020} and \cite{Slabber2020}.
+    The model describes the aerodynamic forces as,
+    \begin{equation} \label{eq:drag}
+        \bm{F}_\mathcal{B}^A = \frac{1}{2} \rho \bm{V}_{\mathcal{B}_{w}} |\bm{V}_{\mathcal{B}_{w}}| 
+        \begin{bmatrix}
+            C_{D_X} \\ C_{D_Y} \\ C_{D_Z}
+        \end{bmatrix}
+    \end{equation}
+    where $\rho$ is the air density, 
+    \(\bm{V}_{\mathcal{B}_{w}}\) is the relative velocity of air over the quadrotor in the body frame, 
+    and $[C_{D_X}~~C_{D_Y}~~C_{D_Z}]^T$ is the drag coefficients and reference area lumped into a single damping coefficient per axis.
+    The relative velocity, \(\bm{V}_{\mathcal{B}_{w}}\), is calculated as
+    \begin{equation}
+        \bm{V}_{\mathcal{B}_{w}} = -\bm{V}_\mathcal{B} + \bm{R}_{V} \bm{V}_w, 
+    \end{equation}
+    where \(\bm{V}_w\) is the wind velocity in the inertial frame.
+    It is assumed the moments caused by aerodynamics are negligible and is therefore modelled as,
+    \begin{equation}
+        \bm{M}_\mathcal{B}^A =
+        \begin{bmatrix}
+            0 \\
+            0 \\
+            0
+        \end{bmatrix}.
+    \end{equation}
+    
+    \paragraph
+    \textbf{Gravity} \newline
+    Gravity applies a vertical force to the quadrotor in the inertial Down axis.
+    The inertial force is transformed into the body frame with the \gls{DCM}.
+    No moments are applied to the quadrotor due to gravity.
+    Therefore the total force and moments acting on the quadrotor due to gravity is,
+    \begin{equation}
+        \bm{F}_\mathcal{B}^G = \bm{R}_V
+        \begin{bmatrix}
+            0 \\
+            0 \\
+            m_q g
+        \end{bmatrix}  \mbox{~~and~~}
+        \bm{M}_\mathcal{B}^G =
+        \begin{bmatrix}
+            0 \\
+            0 \\
+            0
+        \end{bmatrix}.
+    \end{equation}
+
+    \paragraph
+    \textbf{Suspended payload} \newline
+    The suspended payload applies reaction forces and moments to the quadrotor due to its motion relative to the vehicle.
+    The payload and cable also experience gravity and aerodynamic forces which influence its motion.
+    These forces and moments will be discussed in the section below.
     
 \FloatBarrier\section{Suspended payload model}
 
     \paragraph
-    The suspended payload is modelled as a rigid body attached by a link to the \gls{CoM} of the quadrotor rigid body.
+    The suspended payload is modelled as a rigid body which is attached to the quadrotor \gls{CoM} by a rigid link.
     Figure~\ref{fig:quad_payload} illustrates a quadrotor with a suspended payload and the Euler-ZYX angles of the suspended payload in the inertial frame are also shown.
     The $x$-axis and $y$-axis Euler angles are denoted by $\theta_p$ and $\phi_p$ respectively.
     The $z$-axis Euler angle does not contribute to the system dynamics and is omitted. 
