Finished lagragian section about non-conservative forces

--- a/control/control_implementation.tex
+++ b/control/control_implementation.tex
@@ -150,7 +150,7 @@
         \input{control/plots/compare_control_theta_dynamic.tex}
         
         \paragraph
-        Figure~\ref{fig:compare_control_theta_dynamic} shows the suspension cable angle for a velocity step response.
+        Figure~\ref{fig:compare_control_theta_dynamic} shows the cable angle for a velocity step response.
         It appears that the \gls{LQR} and \gls{MPC} damp the payload oscillations with a similar response time.
         However, the superimposed, high-frequency oscillations are smaller in the \gls{LQR} response than in the \gls{MPC} response.
         The \gls{LQR} naively damps the payload oscillations because its controller gain is determined from the same dynamical model as for a simple suspended payload.
